--- a/backend/.env.example
+++ b/backend/.env.example
@@ -41,7 +41,7 @@ SENDINBLUE_SMTP_PASSWORD=your_sendinblue_password
 USE_ETHEREAL=false
 
 # Frontend URL for email links
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL="http://98.70.40.75:3000"
 
 # ================================
 # OAUTH CONFIGURATION
@@ -90,7 +90,7 @@ DEBUG_MODE=true
 LOG_LEVEL=info
 
 # CORS Origins (comma-separated)
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5000
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5000,http://98.70.40.75:5001
 
 # ================================
 # PRODUCTION SETTINGS
