--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://20.244.45.50:5001/api
+REACT_APP_API_URL=https://auroravoyages.com/api
 # REACT_APP_API_URL=https://auroravoyages-backend-hdhyd0gtghh3eye7.eastasia-01.azurewebsites.net/api 
 REACT_APP_GOOGLE_CLIENT_ID=431631950519-792b7063dnhnungfc2p40e4li9q6qsu3.apps.googleusercontent.com
 # Replace YOUR_NEW_API_KEY with your actual API key from https://developer.accuweather.com/
