--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,25 +30,24 @@ jobs:
           npm install
           npm run build
 
-      - name: 🔐 Start SSH Agent and Load Key
+      - name: 🔐 Set up SSH Key
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: 🚀 Deploy to Azure VM
         run: |
-          echo "Uploading files to Azure VM..."
-          scp -r frontend/build/* ${{ secrets.VM_USER }}@${{ secrets.VM_IP }}:/var/www/html/aurora/frontend/build/
-          scp -r backend ${{ secrets.VM_USER }}@${{ secrets.VM_IP }}:/var/www/html/aurora/
-          ssh ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} << 'EOF'
-            echo "Installing backend dependencies..."
+          echo "📡 Uploading build files to Azure VM..."
+          scp -o StrictHostKeyChecking=no -r frontend/build/* ${{ secrets.VM_USER }}@${{ secrets.VM_IP }}:/var/www/html/aurora/frontend/build/
+          scp -o StrictHostKeyChecking=no -r backend ${{ secrets.VM_USER }}@${{ secrets.VM_IP }}:/var/www/html/aurora/
+
+          echo "🔧 SSH into VM and restart services..."
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} << 'EOF'
             cd /var/www/html/aurora/backend
             npm install
-            echo "Restarting backend with PM2..."
             pm2 restart aurora-backend || pm2 start npm --name aurora-backend -- start
-            echo "Restarting Apache server..."
             sudo systemctl restart apache2
           EOF
 
       - name: ✅ Deployment Complete
-        run: echo "🎉 AuroraVoyages deployed successfully!"
+        run: echo "🎉 Aurora Voyages has been successfully deployed!"
