--- a/backend/.env
+++ b/backend/.env
@@ -38,7 +38,7 @@ SENDINBLUE_SMTP_PASSWORD=3sk7HGBfE4qOcQjS
 USE_ETHEREAL=false
 
 # Frontend URL for email links
-FRONTEND_URL="https://auroravoyages.com"
+FRONTEND_URL="48.216.209.50"
 
 # ================================
 # OAUTH CONFIGURATION
@@ -87,7 +87,7 @@ DEBUG_MODE=true
 LOG_LEVEL=info
 
 # CORS Origins (comma-separated)
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5000,https://auroravoyages.com
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5000,https://
 
 # ================================
 # PRODUCTION SETTINGS
