--- a/backend/.env.example
+++ b/backend/.env.example
@@ -90,7 +90,7 @@ DEBUG_MODE=true
 LOG_LEVEL=info
 
 # CORS Origins (comma-separated)
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5000,https://auroravoyages.com"
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5000,48.216.209.50"
 
 # ================================
 # PRODUCTION SETTINGS
