--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://auroravoyages.com/api
+REACT_APP_API_URL=https:///api
 # REACT_APP_API_URL=https://auroravoyages-backend-hdhyd0gtghh3eye7.eastasia-01.azurewebsites.net/api 
 REACT_APP_GOOGLE_CLIENT_ID=556482425345-670isr3t4p8ejftd4o3n41vemc3gsp7a.apps.googleusercontent.com
 # Replace YOUR_NEW_API_KEY with your actual API key from https://developer.accuweather.com/
